--- a/index.html
+++ b/index.html
@@ -51,6 +51,38 @@
         text-align:justify;  /* ✅ JUSTIFIED CONTENT */
     }
 
+    .hero {
+    min-height: 100vh;
+    padding: 0 10%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;   /* Center vertically */
+    align-items: center;       /* Center horizontally */
+    text-align: center;
+    overflow: hidden;
+    background: url('https://raw.githubusercontent.com/akshayanand-nitc/akshay/refs/heads/main/hero.jpg') no-repeat center top/cover;
+}
+
+/* Dark overlay to make the image opacity 40% */
+.hero::after {
+    content: "";
+    position: absolute;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    background: rgba(10, 10, 10, 0.88); /* 40% visible image */
+    z-index: 1;
+}
+
+/* Gradient Overlay (kept as original but now above the dark overlay) */
+.hero::before {
+    content: "";
+    position: absolute;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    background: linear-gradient(to bottom, rgba(10,10,10,0.0) 100%, rgba(10,10,10,0.8) 100%, rgba(10,10,10,1) 100%);
+    z-index: 2;
+}
     /* ===== Cards Grid ===== */
     .card-grid{
         display:grid;
@@ -99,7 +131,7 @@
         <a href="contact.html">Contact</a>
     </nav>
 </header>
-
+<section class="hero">
 <!-- Mobile Nav -->
 <div class="mobile-nav" id="mobileNav">
     <a href="index.html">Home</a>
@@ -164,7 +196,7 @@
         </div>
     </div>
 </div>
-
+</section>
 <script>
 function toggleMenu(){
     document.getElementById("mobileNav").classList.toggle("active");
