--- a/index.html
+++ b/index.html
@@ -82,20 +82,18 @@
     </div>
     <div class="logo">MyPortfolio</div>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="research.html">Research</a>
-        <a href="projects.html">Projects</a>
-        <a href="contact.html">Contact</a>
+        <a href="akshayanand-nitc.github.io">Home</a>
+        <a href="akshayanand-nitc.github.io/about-me">About</a>
+        <a href="akshayanand-nitc.github.io/research">Research</a>
+        <a href="akshayanand-nitc.github.io/contact">Contact</a>
     </nav>
 </header>
 <!-- Mobile Nav -->
 <div class="mobile-nav" id="mobileNav">
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="research.html">Research</a>
-    <a href="projects.html">Projects</a>
-    <a href="contact.html">Contact</a>
+    <a href="akshayanand-nitc.github.io">Home</a>
+    <a href="akshayanand-nitc.github.io/about-me">About</a>
+    <a href="akshayanand-nitc.github.io/research">Research</a>
+    <a href="akshayanand-nitc.github.io/contact">Contact</a>
 </div>
 <!-- Spotlights -->
 <div class="spotlight one"></div>
